<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addTag"
        android:icon="@drawable/add_icon"
        android:title="AddTag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/saveChanges"
        android:icon="@drawable/save_icon"
        android:title="Save"
        app:showAsAction="ifRoom" />
</menu>