...
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="8dp"-->
                <!--                    android:text="created : 7/31/2019"-->
                <!--                    android:textStyle="italic"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/nTitle" />-->

                <!--                <TextView-->
                <!--                    android:id="@+id/nTime"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginStart="16dp"-->
...
